--- a/src/styles/AnimeTitle.module.css
+++ b/src/styles/AnimeTitle.module.css
@@ -1,5 +1,36 @@
+.wrapper {
+    padding: 20px 20px;
+    height: 2000px;
+}
+
+.promo {
+    display: flex;
+    align-items: flex-start;
+}
+
 .preview {
     display: flex;
     align-items: center;
     font-size: 2rem;
+}
+
+.info {
+    margin-left: 1rem;
+}
+
+.titleImgBox {
+    position: relative;
+    overflow: hidden;
+    width: 225px;
+    height: 320px;
+}
+
+.titleImg {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    width: 225px;
+    height: 320px;
+    object-fit: cover;
 }
