--- a/src/UI/SideMenu/SideMenu.module.css
+++ b/src/UI/SideMenu/SideMenu.module.css
@@ -18,11 +18,33 @@
     padding: 6px 12px;
 }
 
-.btnWrapper {
+.icon {
+    font-size: 1.2rem;
+    color:rgba(0,0,0,0.88);
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+}
+
+.btnWrapper {
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+}
+
+.btnWrapper + .btnWrapper {
+    margin-top: 4px;
 }
 
 .btnTitle {
     font-weight: bold;
+    display: block;
+    min-width: 100px;
 }
+
+.expanded {
+    min-width: 200px;
+}
+
