--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,12 @@
+:root {
+    --main-blue: rgb(22,119,255);
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
 }
 
 .App {
@@ -21,4 +26,12 @@
 .main {
     display: flex;
     position: relative;
+    min-height: calc(100vh - 55px);
+}
+
+.content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
