--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -10,6 +10,10 @@
     width: 250px;
 }
 
+.ctrlBtn:hover {
+    background-color: whitesmoke;
+}
+
 .sidebar {
     position: sticky;
     display: flex;
@@ -24,14 +28,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 39px;
+    height: 39px;
 }
 
 .btnWrapper {
     overflow: hidden;
     display: flex;
     align-items: center;
+    border-radius: 12px;
+    color: initial;
+    text-decoration: none;
+    transition: all 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.btnWrapper:hover {
+    background-color: whitesmoke;
 }
 
 .btnWrapper + .btnWrapper {
